# mr_capuccin_bot

./: .env.example  .gitignore  pyproject.toml  requirements.txt
accounts_app/: admin.py  apps.py  forms.py  models.py
accounts_app/migrations/: 0001_initial.py  0002_customuser_recv_reports_customuser_tgid.py  0003_remove_customuser_recv_reports_and_more.py  0004_customuser_send_reports_customuser_tgid.py  0005_remove_customuser_send_reports_and_more.py
config/: settings.py  urls.py
report_app/: admin.py  apps.py  models.py  urls.py  views.py
report_app/migrations/: 0001_initial.py  0002_dailyreport_tasks_cnt_and_more.py
ssl/: certificate.crt  private.key
system_files/: mrcapuccin.conf  mrcapuccin_80.conf  mrcapuccin_gunicorn.service  mrcapuccin_gunicorn.socket  mrcapuccin_tgbot.service
templates/: _base.html
templates/registration/: login.html
templates/report_app/: index.html
tgbot_app/: admin.py  apps.py  loader.py  models.py
tgbot_app/filters/: __init__.py  no_open_sessions.py
tgbot_app/handlers/: __init__.py  change_worker_handler.py  common_handler.py  info_handler.py  start_handler.py  work_handler.py
tgbot_app/keyboards/: __init__.py  changing_keyboard.py  common_keyboard.py  stores_keyboard.py
tgbot_app/middlewares/: __init__.py  is_worker_middleware.py
tgbot_app/migrations/: 0001_initial.py  0002_alter_task_options_task_task_type_and_more.py  0003_alter_task_options.py  0004_rename_tasks_store_task_types.py  0005_task_is_open.py  0006_remove_task_is_open_task_out_of_time.py  0007_worksession_is_open.py  0009_delete_task.py  (+4 more)
(+8 files in other folders)
